<resources>
    <string name="app_name">Wat2eat</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_account">Account</string>

    <!-- User Authentication -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_re_password">Re-enter Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_re_password">Passwords do not match</string>
    <string name="login_incorrect_credentials">Incorrect email or password.</string>
    <string name="login_failed">"Login failed, unexpected error occurred.</string>
    <string name="login_backend_failed">"Login failed, server error occurred.</string>
    <string name="sign_up_email_in_use">The email address is already in use.</string>
    <string name="sign_up_failed">"Sign up failed, unexpected error occurred.</string>
    <string name="sign_up_backend_failed">"Sign up failed, server error occurred.</string>

    <!-- Recipe -->
    <!-- TODO: replace these with actual data -->
    <string name="recipe_image">Recipe image</string>
    <string name="recipe_title">Recipe name</string>
    <string name="go_back">Go back</string>
    <string name="save_recipe">Save recipe</string>
    <string name="cooking_time">Cooking time</string>
    <string name="servings">Servings</string>
    <string name="calories">Calories</string>
    <string name="ingredients">Ingredients</string>
    <string name="equipment">Equipment</string>
    <string name="instructions">Instructions</string>
    <string name="content">1.Pour the buttermilk into a tray or bowl add one teaspoon of salt, mix through and place the chicken pieces into the buttermilk. Depending on the size and shape of your bowl you may need a little bit more buttermilk in order that the chicken is covered. Cover with some cling film and place in the fridge for up to 8 hours. Remove before frying to give enough time to bring the meat up to room temperature.\n2.In a dish or bowl combine the flour, half teaspoon of salt, smoked paprika, thyme and pepper. Combine with your fingers or a fork.\n3.Remove the chicken from the buttermilk marinade and dispose of the marinade. Shake off most of the drips and then dredge the chicken in your flour mix making sure each piece is covered completely.\n4.Heat about 1.5cm / 0.5 in. of oil in a heavy bottomed wide pan. While this is heating up you can get a wire rack ready to drain the chicken. I do this by placing kitchen paper over the rack.\n5.The oil temperature should be about 170C / 340F for frying. I dont check with a thermometer but by putting a piece of bread in the oil and it is ready when it fizzes and turns brown quickly. The time the oil takes to heat up will depend on the thickness of the metal of your pan, your stove top and the quantity of oil you have used.\n6.You will probably have to cook in batches so as not to over load the pan. I start with the thighs which need a little bit more time than the legs. Place each one carefully in the pan and fry, covered, on a good strong simmer for anywhere between 8 to 12 minutes on each side. The heat needs to be high enough to give you a nice brown colour and a crisp finish. Remove and set on the rack to drain. Then do the same with the legs, giving them a couple of minutes less than the thighs.</string>
    <string name="search_hint_recipes">Search for recipes</string>
    <string name="add_review">add_review</string>
    <string name="summary">Summary</string>
    <string name="reviews">Reviews</string>
    <string name="image">image</string>
    <string name="back_button">back button</string>
    <string name="add_review_">Add Review</string>
    <string name="back_to_recipe">Back to Recipe</string>
</resources>