<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.recipe.RecipeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/recipe_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:contentScrim="@color/purple_500"
            app:expandedTitleMarginEnd="72dp"
            app:expandedTitleMarginStart="50dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/recipe_imageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/recipe_image"
                android:scaleType="centerCrop"
                android:src="@drawable/food_img"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

            <Toolbar
                android:id="@+id/recipe_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:titleTextColor="@color/white"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap" />

            <ImageButton
                android:id="@+id/recipe_imageButton_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:background="@drawable/white_bg"
                android:contentDescription="@string/go_back"
                android:paddingStart="14dp"
                android:paddingTop="12dp"
                android:paddingEnd="10dp"
                android:paddingBottom="12dp"
                android:src="@drawable/ic_arrow_back_24" />

            <ImageButton
                android:id="@+id/recipe_imageButton_favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:background="@drawable/white_bg"
                android:contentDescription="@string/save_recipe"
                android:padding="12dp"
                android:src="@drawable/ic_favorite_border_24" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/recipe_title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/cooking_time"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:drawableLeftCompat="@drawable/ic_timer_24" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/calories"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:drawableLeftCompat="@drawable/ic_fire_24" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/servings"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:drawableLeftCompat="@drawable/ic_dining_24" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>